load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["test.go"],
    importpath = "api/api",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gofiber_fiber_v2//:go_default_library"],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
