load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "api/api",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
